@@ -3027,3 +3027,22 @@ bool holyhandgrenade::WillExplodeSoon() const
 {
   return PinPulledTick != 0;
 }
+
+void pantheonbook::FinishReading(character* Reader)
+{
+  if(Reader->IsPlayer())
+  {
+    PLAYER->EditExperience(INTELLIGENCE, 75, 1 << 12);
+    PLAYER->EditExperience(WISDOM, 1000, 1 << 12);
+
+    ADD_MESSAGE("The book reveals many divine secrets of the pantheon to you and disappears.");
+    game::AdjustRelationsToAllGods(75);
+    RemoveFromSlot();
+    SendToHell();
+  }
+}
+
+col16 pantheonbook::GetMaterialColorA(int) const
+{
+  return MakeRGB16(200, 200, 200); 
+}
