@@ -8,6 +8,11 @@
 -----------------------------------------------------------------------------
 May 7 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
 
+  * player now get a mysterious and large saga of the pantheon when he/she/it
+    finds about all the gods.	
+	
+May 7 2005 Heikki Sairanen <heikki.sairanen@gmail.com>
+
   * added some features that will give player bonus when he finds all gods 
 	(not fully implemented yet)
 
